Adding Intergration testing